--- a/inventory/intended/structured_configs/DC1-LEAF1A.yml
+++ b/inventory/intended/structured_configs/DC1-LEAF1A.yml
@@ -26,10 +26,10 @@ router_bgp:
       type: evpn
       update_source: Loopback0
       bfd: true
-      ebgp_multihop: '3'
       password: q+VNViP5i4rVjW1cxFv2wA==
       send_community: all
       maximum_routes: 0
+      ebgp_multihop: 3
   address_family_ipv4:
     peer_groups:
       MLAG-IPv4-UNDERLAY-PEER:
@@ -76,11 +76,11 @@ router_bgp:
         export:
           evpn:
           - '12:12'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_A_DB_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:13
@@ -91,11 +91,11 @@ router_bgp:
         export:
           evpn:
           - '13:13'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_A_OP_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:10
@@ -106,11 +106,11 @@ router_bgp:
         export:
           evpn:
           - '10:10'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_A_WAN_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:14
@@ -121,11 +121,11 @@ router_bgp:
         export:
           evpn:
           - '14:14'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_A_WEB_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:11
@@ -136,11 +136,11 @@ router_bgp:
         export:
           evpn:
           - '11:11'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_B_OP_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:20
@@ -151,11 +151,11 @@ router_bgp:
         export:
           evpn:
           - '20:20'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_B_WAN_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:21
@@ -166,11 +166,11 @@ router_bgp:
         export:
           evpn:
           - '21:21'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_C_OP_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:30
@@ -181,11 +181,11 @@ router_bgp:
         export:
           evpn:
           - '30:30'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
     Tenant_C_WAN_Zone:
       router_id: 192.168.255.3
       rd: 192.168.255.3:31
@@ -196,11 +196,11 @@ router_bgp:
         export:
           evpn:
           - '31:31'
+      redistribute_routes:
+      - connected
       neighbors:
         10.255.251.1:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
-      redistribute_routes:
-      - connected
   vlan_aware_bundles:
     Tenant_A_APP_Zone:
       rd: 192.168.255.3:12
@@ -233,7 +233,7 @@ router_bgp:
         - '14:14'
       redistribute_routes:
       - learned
-      vlan: 150
+      vlan: '150'
     Tenant_A_WEB_Zone:
       rd: 192.168.255.3:11
       route_targets:
@@ -242,15 +242,6 @@ router_bgp:
       redistribute_routes:
       - learned
       vlan: 120-121
-    Tenant_A_VMOTION:
-      tenant: Tenant_A
-      rd: 192.168.255.3:55160
-      route_targets:
-        both:
-        - 55160:55160
-      redistribute_routes:
-      - learned
-      vlan: 160
     Tenant_A_NFS:
       tenant: Tenant_A
       rd: 192.168.255.3:10161
@@ -259,7 +250,16 @@ router_bgp:
         - 10161:10161
       redistribute_routes:
       - learned
-      vlan: 161
+      vlan: '161'
+    Tenant_A_VMOTION:
+      tenant: Tenant_A
+      rd: 192.168.255.3:55160
+      route_targets:
+        both:
+        - 55160:55160
+      redistribute_routes:
+      - learned
+      vlan: '160'
     Tenant_B_OP_Zone:
       rd: 192.168.255.3:20
       route_targets:
@@ -275,7 +275,7 @@ router_bgp:
         - '21:21'
       redistribute_routes:
       - learned
-      vlan: 250
+      vlan: '250'
     Tenant_C_OP_Zone:
       rd: 192.168.255.3:30
       route_targets:
@@ -291,7 +291,7 @@ router_bgp:
         - '31:31'
       redistribute_routes:
       - learned
-      vlan: 350
+      vlan: '350'
 static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
@@ -300,7 +300,7 @@ service_routing_protocols_model: multi-agent
 ip_routing: true
 daemon_terminattr:
   cvaddrs:
-  - 192.168.0.1:9910
+  - 192.168.0.5:9910
   cvauth:
     method: token
     key: ''
@@ -380,6 +380,7 @@ management_interfaces:
 management_api_http:
   enable_vrfs:
     MGMT: {}
+    default: {}
   enable_https: true
 vlans:
   4093:
@@ -495,8 +496,8 @@ vlan_interfaces:
   Vlan4093:
     description: MLAG_PEER_L3_PEERING
     shutdown: false
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan4094:
     description: MLAG_PEER
     shutdown: false
@@ -517,16 +518,16 @@ vlan_interfaces:
     - app
     description: Tenant_A_APP_Zone_2
     shutdown: false
-    vrf: Tenant_A_APP_Zone
     ip_address_virtual: 10.1.31.254/24
+    vrf: Tenant_A_APP_Zone
   Vlan3011:
     tenant: Tenant_A
     type: underlay_peering
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_A_APP_Zone'
     vrf: Tenant_A_APP_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan140:
     tenant: Tenant_A
     tags:
@@ -534,72 +535,72 @@ vlan_interfaces:
     - erp1
     description: Tenant_A_DB_BZone_1
     shutdown: false
-    vrf: Tenant_A_DB_Zone
     ip_address_virtual: 10.1.40.1/24
+    vrf: Tenant_A_DB_Zone
   Vlan141:
     tenant: Tenant_A
     tags:
     - db
     description: Tenant_A_DB_Zone_2
     shutdown: false
-    vrf: Tenant_A_DB_Zone
     ip_address_virtual: 10.1.41.1/24
+    vrf: Tenant_A_DB_Zone
   Vlan3012:
     tenant: Tenant_A
     type: underlay_peering
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_A_DB_Zone'
     vrf: Tenant_A_DB_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan110:
     tenant: Tenant_A
     tags:
     - opzone
     description: Tenant_A_OP_Zone_1
     shutdown: false
-    vrf: Tenant_A_OP_Zone
     ip_address_virtual: 10.1.10.1/24
+    vrf: Tenant_A_OP_Zone
   Vlan111:
     tenant: Tenant_A
     tags:
     - opzone
     description: Tenant_A_OP_Zone_2
     shutdown: false
-    vrf: Tenant_A_OP_Zone
     ip_address_virtual: 10.1.11.1/24
+    vrf: Tenant_A_OP_Zone
   Vlan112:
     tenant: Tenant_A
     tags:
     - opzone
     description: Tenant_A_OP_Zone_3
     shutdown: false
-    vrf: Tenant_A_OP_Zone
     ip_address_virtual: 10.1.12.254/24
+    vrf: Tenant_A_OP_Zone
   Vlan3009:
     tenant: Tenant_A
     type: underlay_peering
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_A_OP_Zone'
     vrf: Tenant_A_OP_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan150:
     tenant: Tenant_A
     tags:
     - wan
     description: Tenant_A_WAN_Zone_1
     shutdown: false
-    vrf: Tenant_A_WAN_Zone
     ip_address_virtual: 10.1.40.1/24
+    vrf: Tenant_A_WAN_Zone
   Vlan3013:
     tenant: Tenant_A
     type: underlay_peering
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_A_WAN_Zone'
     vrf: Tenant_A_WAN_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan120:
     tenant: Tenant_A
     tags:
@@ -614,16 +615,16 @@ vlan_interfaces:
     - web
     description: Tenant_A_WEBZone_2
     shutdown: false
-    vrf: Tenant_A_WEB_Zone
     ip_address_virtual: 10.1.21.1/24
+    vrf: Tenant_A_WEB_Zone
   Vlan3010:
     tenant: Tenant_A
     type: underlay_peering
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_A_WEB_Zone'
     vrf: Tenant_A_WEB_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan210:
     tenant: Tenant_B
     tags:
@@ -637,32 +638,32 @@ vlan_interfaces:
     - opzone
     description: Tenant_B_OP_Zone_2
     shutdown: false
-    vrf: Tenant_B_OP_Zone
     ip_address_virtual: 10.2.11.1/24
+    vrf: Tenant_B_OP_Zone
   Vlan3019:
     tenant: Tenant_B
     type: underlay_peering
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_B_OP_Zone'
     vrf: Tenant_B_OP_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan250:
     tenant: Tenant_B
     tags:
     - wan
     description: Tenant_B_WAN_Zone_1
     shutdown: false
-    vrf: Tenant_B_WAN_Zone
     ip_address_virtual: 10.2.50.1/24
+    vrf: Tenant_B_WAN_Zone
   Vlan3020:
     tenant: Tenant_B
     type: underlay_peering
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_B_WAN_Zone'
     vrf: Tenant_B_WAN_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan310:
     tenant: Tenant_C
     tags:
@@ -683,8 +684,8 @@ vlan_interfaces:
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_C_OP_Zone'
     vrf: Tenant_C_OP_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
   Vlan350:
     tenant: Tenant_C
     tags:
@@ -698,8 +699,8 @@ vlan_interfaces:
     shutdown: false
     description: 'MLAG_PEER_L3_iBGP: vrf Tenant_C_WAN_Zone'
     vrf: Tenant_C_WAN_Zone
-    ip_address: 10.255.251.0/31
     mtu: 1500
+    ip_address: 10.255.251.0/31
 port_channel_interfaces:
   Port-Channel3:
     description: MLAG_PEER_DC1-LEAF1B_Po3
@@ -714,8 +715,8 @@ port_channel_interfaces:
     description: DC1-L2LEAF1A_Po1
     type: switched
     shutdown: false
-    vlans: 110-112,120-121,130-131
     mode: trunk
+    vlans: 110-112,120-121,130-131
     mlag: 5
 ethernet_interfaces:
   Ethernet3:
@@ -743,26 +744,26 @@ ethernet_interfaces:
     peer_interface: Ethernet1
     peer_type: spine
     description: P2P_LINK_TO_DC1-SPINE1_Ethernet1
+    shutdown: false
     mtu: 1500
     type: routed
-    shutdown: false
     ip_address: 172.31.255.1/31
   Ethernet2:
     peer: DC1-SPINE2
     peer_interface: Ethernet1
     peer_type: spine
     description: P2P_LINK_TO_DC1-SPINE2_Ethernet1
+    shutdown: false
     mtu: 1500
     type: routed
-    shutdown: false
     ip_address: 172.31.255.3/31
   Ethernet5:
     peer: DC1-L2LEAF1A
     peer_interface: Ethernet1
     peer_type: l2leaf
     description: DC1-L2LEAF1A_Ethernet1
-    type: switched
     shutdown: false
+    type: switched
     channel_group:
       id: 5
       mode: active
@@ -820,9 +821,9 @@ vxlan_interface:
   Vxlan1:
     description: DC1-LEAF1A_VTEP
     vxlan:
+      udp_port: 4789
       source_interface: Loopback1
       virtual_router_encapsulation_mac_address: mlag-system-id
-      udp_port: 4789
       vlans:
         130:
           vni: 10130
