--- a/inventory/group_vars/DC1.yml
+++ b/inventory/group_vars/DC1.yml
@@ -24,10 +24,11 @@ local_users:
     sha512_password: "$6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/"
 
 # Cloud Vision server information
-cvp_instance_ip: 192.168.0.1
+cvp_instance_ip: 192.168.0.5
 cvp_ingestauth_key: ''
-# cvp_ingestauth_key: telarista
 
+# This configures terminattr to use default token
+# authentication used in the more recent CVP versions
 custom_structured_configuration_daemon_terminattr:
   cvauth:
     method: "token"
