--- a/inventory/intended/configs/DC1-L2LEAF1A.cfg
+++ b/inventory/intended/configs/DC1-L2LEAF1A.cfg
@@ -1,7 +1,7 @@
 !RANCID-CONTENT-TYPE: arista
 !
 daemon TerminAttr
-   exec /usr/bin/TerminAttr -cvaddr=192.168.0.1:9910 -cvauth=token,/tmp/token -cvvrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
+   exec /usr/bin/TerminAttr -cvaddr=192.168.0.5:9910 -cvauth=token,/tmp/token -cvvrf=MGMT -smashexcludes=ale,flexCounter,hardware,kni,pulse,strata -ingestexclude=/Sysdb/cell/1/agent,/Sysdb/cell/2/agent -taillogs
    no shutdown
 !
 vlan internal order ascending range 1006 1199
@@ -89,6 +89,9 @@ ip route vrf MGMT 0.0.0.0/0 192.168.0.1
 management api http-commands
    protocol https
    no shutdown
+   !
+   vrf default
+      no shutdown
    !
    vrf MGMT
       no shutdown
