--- a/playbooks/dc1-fabric-validate.yml
+++ b/playbooks/dc1-fabric-validate.yml
@@ -1,21 +1,19 @@
 ---
-# For validation, we need the inventory files and group_vars updated with at least the topology parts
-# Structured configuration needs to have been created
-# can we use it without having any config on the devices yet?
+# This playbook generates the structured configuration, then
+# uses the eos_validate_state to verify whether the states
+# on the EOS devices match the structured configuration.
 
 - name: Validate Arista EOS EVPN/VXLAN Configuration
   hosts: DC1_FABRIC
   gather_facts: false
-  collections:
-    - arista.avd
   tasks:
-    - name: generate intended variables
-      import_role:
+    - name: Generate intended variables
+      ansible.builtin.import_role:
         name: arista.avd.eos_designs
       tags: generate
 
     - name: Validate State
-      import_role:
+      ansible.builtin.import_role:
         name: arista.avd.eos_validate_state
       vars:
         structured_dir: ../inventory/intended/structured_configs
