--- a/playbooks/dc1-fabric-deploy-cvp.yml
+++ b/playbooks/dc1-fabric-deploy-cvp.yml
@@ -3,35 +3,29 @@
   hosts: DC1_FABRIC
   connection: local
   gather_facts: false
-  collections:
-    - arista.avd
-    - arista.cvp
   tasks:
-    - name: 'reset local folders for output'
+    - name: Reset local folders for output'
       tags: [build, generate]
-      import_role:
+      ansible.builtin.import_role:
         name: arista.avd.build_output_folders
 
-    - name: generate intended variables
+    - name: Generate intended variables
       tags: [build, generate]
-      import_role:
+      ansible.builtin.import_role:
         name: arista.avd.eos_designs
 
-    - name: generate device intended config and documentation
+    - name: Generate device intended config and documentation
       tags: [build, generate]
-      import_role:
-        name: eos_cli_config_gen
+      ansible.builtin.import_role:
+        name: arista.avd.eos_cli_config_gen
 
 - name: Configuration deployment with CVP
   hosts: cv_server
   connection: local
   gather_facts: false
-  collections:
-    - arista.avd
-    - arista.cvp
   tasks:
-    - name: run CVP provisioning
-      import_role:
+    - name: Run CVP provisioning
+      ansible.builtin.import_role:
         name: arista.avd.eos_config_deploy_cvp
       vars:
         container_root: 'DC1_FABRIC'
