--- a/playbooks/dc1-fabric-reset-cvp.yml
+++ b/playbooks/dc1-fabric-reset-cvp.yml
@@ -3,12 +3,9 @@
   hosts: cv_server
   connection: local
   gather_facts: false
-  collections:
-    - arista.avd
-    - arista.cvp
   tasks:
-    - name: run CVP provisioning
-      import_role:
+    - name: Run CVP provisioning
+      ansible.builtin.import_role:
         name: arista.avd.eos_config_deploy_cvp
       vars:
         container_root: 'DC1_FABRIC'
