--- a/playbooks/dc1-upload-configlets.yml
+++ b/playbooks/dc1-upload-configlets.yml
@@ -3,12 +3,9 @@
   hosts: cv_server
   connection: local
   gather_facts: false
-  collections:
-    - arista.avd
-    - arista.cvp
   tasks:
-    - name: 'upload configlets to cloudvision {{inventory_hostname}}'
-      import_role:
+    - name: 'Upload configlets to cloudvision {{ inventory_hostname }}'
+      ansible.builtin.import_role:
         name: arista.avd.cvp_configlet_upload
       vars:
         configlet_directory: 'inventory/intended/configs'
