--- a/playbooks/dc1-ztp-configuration.yml
+++ b/playbooks/dc1-ztp-configuration.yml
@@ -3,6 +3,6 @@
   hosts: cv_ztp
   gather_facts: true
   tasks:
-  - name: 'Execute ZTP configuration role'
-    import_role:
-      name: arista.cvp.dhcp_configuration
+    - name: 'Execute ZTP configuration role'
+      ansible.builtin.import_role:
+        name: arista.cvp.dhcp_configuration
