update for new datamodel

--- a/inventory/group_vars/DC1.yml
+++ b/inventory/group_vars/DC1.yml
@@ -18,7 +18,8 @@ local_users:
     sha512_password: "$6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/"
 
 # Cloud Vision server information
-cvp_instance_ip: 10.255.0.1
+cvp_instance_ips:
+  - 10.255.0.1
 cvp_ingestauth_key: ''
 # cvp_ingestauth_key: telarista
 
