--- a/inventory/group_vars/DC1_SERVERS.yml
+++ b/inventory/group_vars/DC1_SERVERS.yml
@@ -14,16 +14,14 @@ servers:
   server01:
     rack: RackA
     adapters:
-      - type: nic
-        server_ports: [Eth0]
+      - endpoint_ports: [Eth0]
         switch_ports: [Ethernet5]
         switches: [DC1-L2LEAF1A]
         profile: TENANT_A
   server02:
     rack: RackA
     adapters:
-      - type: nic
-        server_ports: [Eth0]
+      - endpoint_ports: [Eth0]
         switch_ports: [Ethernet5]
         switches: [DC1-L2LEAF2A]
         profile: TENANT_A
