--- a/inventory/group_vars/DC1_TENANTS_NETWORKS.yml
+++ b/inventory/group_vars/DC1_TENANTS_NETWORKS.yml
@@ -36,7 +36,7 @@ tenants:
             name: Tenant_A_WEB_Zone_1
             tags: [web, erp1]
             enabled: true
-            ip_subnet: 10.1.20.0/24
+            ip_address_virtual: 10.1.20.1/24
           121:
             name: Tenant_A_WEBZone_2
             tags: [web]
@@ -49,7 +49,7 @@ tenants:
             name: Tenant_A_APP_Zone_1
             tags: [app, erp1]
             enabled: true
-            ip_subnet: 10.1.30.0/24
+            ip_address_virtual: 10.1.30.1/24
           131:
             name: Tenant_A_APP_Zone_2
             tags: [app]
@@ -96,7 +96,7 @@ tenants:
             name: Tenant_B_OP_Zone_1
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.2.10.0/24
+            ip_address_virtual: 10.2.10.1/24
           211:
             name: Tenant_B_OP_Zone_2
             tags: [opzone]
@@ -122,12 +122,12 @@ tenants:
             name: Tenant_C_OP_Zone_1
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.3.10.0/24
+            ip_address_virtual: 10.3.10.1/24
           311:
             name: Tenant_C_OP_Zone_2
             tags: [opzone]
             enabled: true
-            ip_subnet: 10.3.11.1/24
+            ip_address_virtual: 10.3.11.1/24
       Tenant_C_WAN_Zone:
         vrf_vni: 31
         svis:
@@ -135,4 +135,4 @@ tenants:
             name: Tenant_C_WAN_Zone_1
             tags: [wan]
             enabled: true
-            ip_subnet: 10.3.50.1/24
+            ip_address_virtual: 10.3.50.1/24
