--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
-ansible==4.2.0
-netaddr==0.7.19
-Jinja2==2.11.3
-treelib==1.5.5
-cvprac==1.0.7
-paramiko==2.10.1
-jsonschema==3.2.0
-requests==2.25.1
-PyYAML==5.4.1
-md-toc==7.1.0
-markupsafe==2.0.1
+ansible-core==2.16.2
+attrs==23.2.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==41.0.7
+cvprac==1.3.2
+deepmerge==1.1.1
+fpyutils==4.0.1
+idna==3.6
+Jinja2==3.1.3
+jsonschema==4.17.3
+MarkupSafe==2.1.3
+md-toc==8.2.2
+netaddr==0.10.1
+packaging==23.2
+pycparser==2.21
+pyrsistent==0.20.0
+PySocks==1.7.1
+PyYAML==6.0.1
+requests==2.31.0
+resolvelib==1.0.1
+six==1.16.0
+treelib==1.7.0
+urllib3==2.1.0
